--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Nayr Aracely Cabral Garcete</h1>
 
     <p>
-        Estoy estudiando programación porque quiero cambiar de trabajo y dedicarme a algo que realmente me gusta.
+        Estoy estudiando Estoy estudiando programación para desarrollar mis habilidades y crear aplicaciones web modernas y funcionales.
     </p>
 
 </body>
